src/app/globals.css
@import "tailwindcss";

::-webkit-scrollbar {
  display: none;
}

:root,
.theme-light {
  --background: #f0f0f0;
  --foreground: #171717;
  --primary: #fee685;
  --inputbg: #ffffff;
  --cardbg: #ffffff;
  --cardhoverbg: #e0e0e0;
  --cardborder: #ffffff00;
  --shadow: #838383;
  --text-primary: #333;
  --text-secondary: #777;
  --bg-primary: #fff;
  --bg-secondary: #f5f5f5;
  --accent-color: #fee685;
  --border-color: #ddd;
}

.theme-dark {
  --background: #0a0a0a;
  --foreground: #ededed;
  --primary: #927d2b;
  --inputbg: #ffffff;
  --cardbg: #101010;
  --cardhoverbg: #2a2a2a;
  --cardborder: #2d2d2d;
  --shadow: #2a2a2a;
  --text-primary: #eee;
  --text-secondary: #bbb;
  --bg-primary: #121212;
  --bg-secondary: #222;
  --accent-color: #927d2b;
  --border-color: #444;
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
}

h1 {
  font-size: 2.25rem;
  font-weight: bold;
  text-align: center;
}

.overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 920px;
}

/* @media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
} */

/* @theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
} */

